src/LuckyDraw V1.0/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>New Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified - Business Unknown</fullName>
        </values>
        <values>
            <fullName>Unqualified - Competitor</fullName>
        </values>
        <values>
            <fullName>Unqualified - Duplicate</fullName>
        </values>
        <values>
            <fullName>Unqualified - Employee</fullName>
        </values>
        <values>
            <fullName>Unqualified - Left Company</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>IsInterestedInCharket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested In Charket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberId__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Number ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeChatQRCodeURL__c</fullName>
        <label>WeChat QR Code URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sfLma__Subscriber_Org_Type__c</fullName>
        <description>The Edition of this org. UE, EE, PE, TE, Free</description>
        <label>Subscriber Org Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Admins_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Admins</label>
        <queue>Admins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>Install_Package_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>notEqual</operation>
            <value>wechat</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notContain</operation>
            <value>@meginfo.com</value>
        </filters>
        <label>Install Package Leads</label>
    </listViews>
    <listViews>
        <fullName>Leads_has_Email_Not_Meginfo</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>notEqual</operation>
            <value>Meginfo</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>contains</operation>
            <value>@meginfo.com</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <label>Leads has Email - Not Meginfo</label>
    </listViews>
    <listViews>
        <fullName>Meginfo_Leads</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>contains</operation>
            <value>@meginfo.com</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>contains</operation>
            <value>Meginfo</value>
        </filters>
        <label>Meginfo Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Package_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notEqual</operation>
            <value>External Referral</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notContain</operation>
            <value>@meginfo.com</value>
        </filters>
        <label>Package Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>WeChat_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>WeChat</value>
        </filters>
        <label>WeChat Leads</label>
    </listViews>
    <listViews>
        <fullName>WeChat_Made_Easy_Post_Recipients</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>Unqualified</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL_OPT_OUT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>IS_EMAIL_ADDRESS_BOUNCED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>WeChat Made Easy Post Recipients</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>